--- a/client/tsconfig.json
+++ b/client/tsconfig.json
@@ -33,6 +33,7 @@
     "src/**/*.ts",
     "src/**/*.d.ts",
     "src/**/*.tsx",
+    "src/**/*.js",
     "src/**/*.vue",
     "vite.config.ts"
   ],
